--- a/src/pages/PORTAL/2_certificados_pension.html
+++ b/src/pages/PORTAL/2_certificados_pension.html
@@ -36,7 +36,7 @@
         "ico":"file-lines",
         "title":"Certificado de pensión",
         "image":"tmp_header.png",
-        "content":"Qui nulla non et proident fugiat sit nisi minim. Anim laborum ex fugiat eiusmod. Et reprehenderit veniam laboris fugiat dolore laboris ipsum amet. Nostrud anim elit consequat sunt ut laboris culpa."
+        "content":"¡Aquí puedes solicitar los certificados que necesitas de forma rápida y sencilla!"
      }'
     ></include>
 
@@ -71,7 +71,25 @@
     <div id="content" class="as__section pa__inter">
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
-          <div class="pa_co_header"></div>
+          <div class="pa_co_header">
+            <h4>Generar certificado de pensión:</h4>
+            <ul class="items">
+              <li>
+                <p>
+                  Selecciona <b>“Certificado de pensión SIN salario”</b> para
+                  obtener un documento detallado de tu pensión sin incluir
+                  información salarial.
+                </p>
+              </li>
+              <li>
+                <p>
+                  Selecciona <b>“Certificado de pensión CON salario”</b> si
+                  deseas incluir la información salarial en tu certificado para
+                  conseguir un registro más completo.
+                </p>
+              </li>
+            </ul>
+          </div>
           <div class="pa_co_content">
             <include
               src="PORTAL/2_certificados/2_certificados_pension.html"
