--- a/src/pages/PORTAL/contrasena.html
+++ b/src/pages/PORTAL/contrasena.html
@@ -31,7 +31,7 @@
   <block name="content">
     <include
       src="PORTAL/p_top_no_img.html"
-      locals='{ "cls":"inl small", "ico": "lock-keyhole", "title":"Cambio de contraseña", "image":"tmp_header.png", "content":"Actualizar las contraseñas es una excelente forma de proteger tu cuenta."}'
+      locals='{ "cls":"inl small", "ico": "lock-keyhole", "title":"Cambio de contraseña", "image":"tmp_header.png", "content":""}'
     ></include>
 
     <div id="content" class="as__section pa__inter">
