--- a/src/pages/PORTAL/interna.html
+++ b/src/pages/PORTAL/interna.html
@@ -31,7 +31,7 @@
   <block name="content">
     <include
       src="PORTAL/p_top.html"
-      locals='{ "cls":"", "ico": "comments-question-check",  "title":"Solicitudes y PQRS", "image":"tmp_header.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
+      locals='{ "cls":"", "ico": "comments-question-check",  "title":"Solicitudes", "image":"tmp_header.png", "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."}'
     ></include>
 
     <div id="servicios" class="as__section pa__options">
