--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -192,7 +192,7 @@
                     "ico": "file-invoice",
                      "title":"Actualización de documentos de identidad",
                     "image":"tmp_servicio.png",
-                    "content":"¡Mantén tu información al día! Si recientemente cambiaste tu documento de identidad, es importante que lo actualices. Esto nos ayuda a que todos tus datos estén correctos."
+                    "content":"¡Mantén tu información al día! Tener tus documentos de identidad nos ayuda a protegerte y a garantizar un excelente servicio"
                   }'
                   ></include>
 
@@ -202,7 +202,7 @@
                     "ico": "file-lines",
                      "title":"Actualización de datos de contacto",
                     "image":"tmp_servicio.png",
-                    "content":"¡Aseguremos una buena comunicación! Déjanos saber si has cambiado tu dirección, número de teléfono o correo electrónico, así podremos contactarnos en cualquier momento."
+                    "content":"¡Aseguremos una buena comunicación! Tener actualizada tu información nos ayuda a ofrecerte la mejor atención"
                   }'
                   ></include>
                 </ul>
