Refactor HTML code for certificate pages

--- a/src/pages/PORTAL/2_certificados_pension.html
+++ b/src/pages/PORTAL/2_certificados_pension.html
@@ -1,4 +1,8 @@
-<extends src="portal.html" locals='{ "id": "as__home", "top":"" }'>
+<extends
+  src="portal.html"
+  locals='{ "id": "as__home",
+"top":"" }'
+>
   <block name="head">
     <title>ASULADO Seguros de Vida</title>
     <meta name="title" content="ASULADO Seguros de Vida" />
@@ -46,22 +50,38 @@
           <ul>
             <include
               src="PORTAL/p_link_servicio.html"
-              locals='{ "cls":"", "link":"/PORTAL/2_certificados_colilla.html", "ico": "file-invoice",  "title":"Colilla de pagos", "image":"tmp_servicio.png", "content":"Documento que reúne información sobre tu mesada pensional, incluyendo: valor mensual de la mesada, fecha y descuentos realizados."}'
+              locals='{ "cls":"",
+              "link":"/PORTAL/2_certificados_colilla.html",
+              "ico": "file-invoice",  "title":"Colilla de pagos",
+              "image":"tmp_servicio.png",
+              "content":"Documento que reúne información sobre tu mesada pensional, incluyendo: valor mensual de la mesada, fecha y descuentos realizados."}'
             ></include>
 
             <include
               src="PORTAL/p_link_servicio.html"
-              locals='{ "cls":"active", "link":"/PORTAL/2_certificados_pension.html", "ico": "file-lines",  "title":"Certificado de pensión", "image":"tmp_servicio.png", "content":"Documento que certifica el ingreso de una mesada pensional por parte de ASULADO. Reúne información sobre el tipo de pensión, valor de la mesada pensional y la fecha desde cuándo formas parte de nuestra Familia."}'
+              locals='{ "cls":"active",
+              "link":"/PORTAL/2_certificados_pension.html",
+              "ico": "file-lines",  "title":"Certificado de pensión",
+              "image":"tmp_servicio.png",
+              "content":"Documento que certifica el ingreso de una mesada pensional por parte de ASULADO. Reúne información sobre el tipo de pensión, valor de la mesada pensional y la fecha desde cuándo formas parte de nuestra Familia."}'
             ></include>
 
             <include
               src="PORTAL/p_link_servicio.html"
-              locals='{ "cls":"", "link":"#", "ico": "file-invoice-dollar",  "title":"Copia de póliza", "image":"tmp_servicio.png", "content":"Documento que ilustra los componentes de tu póliza de Renta Vitalicia, tus deberes y derechos como cliente y nuestras obligaciones y derechos como Aseguradora de Vida."}'
+              locals='{ "cls":"",
+              "link":"#",
+              "ico": "file-invoice-dollar",  "title":"Copia de póliza",
+              "image":"tmp_servicio.png",
+              "content":"Documento que ilustra los componentes de tu póliza de Renta Vitalicia, tus deberes y derechos como cliente y nuestras obligaciones y derechos como Aseguradora de Vida."}'
             ></include>
 
             <include
               src="PORTAL/p_link_servicio.html"
-              locals='{"cls":"", "link":"/PORTAL/2_certificados_ingreso.html", "ico": "money-check-pen",  "title":"Certificado de ingresos y retenciones", "image":"tmp_servicio.png", "content":"Documento que informa los ingresos y las retenciones que se realizaron durante un periodo de tiempo determinado. Te servirá para que realices tu declaración de renta y otros trámites."}'
+              locals='{"cls":"",
+              "link":"/PORTAL/2_certificados_ingreso.html",
+              "ico": "money-check-pen",  "title":"Certificado de ingresos y retenciones",
+              "image":"tmp_servicio.png",
+              "content":"Documento que informa los ingresos y las retenciones que se realizaron durante un periodo de tiempo determinado. Te servirá para que realices tu declaración de renta y otros trámites."}'
             ></include>
           </ul>
         </div>
